parser/tests/bad/ref04-3.st
% identifier '%s' has unsubscriptable type
%   variable identifier

var i := 1
const j := i[1]
